just 2 parts done, no documentation

--- a/index.html
+++ b/index.html
@@ -6,10 +6,235 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <script src="https://kit.fontawesome.com/c8b789b4bf.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- menu part -->
+    <header>
+        <nav>
+            <div class="site-name">
+                <h3>Influencer products</h3>
+            </div>
+            <div class="site-menu">
+                <a href="">Home</a>
+                <a href="">Home</a>
+                <a href="">Home</a>
+                <a href="">Home</a>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <!-- first part -->
+        <section class="first-part">
+            <div class="first-text">
+                <h1>Start your journey as influencer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, laudantium.</p>
+                <a class="link-opener" target="_blank" href="https://github.com/Abduj-Zawad/">Prebook Now</a>
+            </div>
+            <div class="first-image">
+                <img src="./images/main-camera.png" alt="">
+            </div>
+        </section>
+        <!-- section.popular-collection>.products>article.each-product>.thumbnil>img[src="images/tripod.png"]+h3 -->
+        <section class="popular-collection">
+            <h2 class="section-title">Popular Collection</h2>
+            <div class="products">
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Flex Tripod</h3>
+                        <span class="product-price">$50.48</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Very handy and very confortable to use with a minimum price. Also
+                                    best for biginers!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">microphone</h3>
+                        <span class="product-price">$120.25</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Very GOOD for recording sound, comnes with a minimum price. Also
+                                    best for all!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Airbuds</h3>
+                        <span class="product-price">$100.00</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Very good quality of sound. Users best choice.</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Drone</h3>
+                        <span class="product-price">$980.25</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Want some amaizing shots?Don't look at the price, just fly!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Light Setup</h3>
+                        <span class="product-price">$1200.00</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Create your own home studio and step to the influencing world,
+                                    which i don't like!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Photoshoot set</h3>
+                        <span class="product-price">$820.40</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>This setup is mandetory!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Vlogging Camera</h3>
+                        <span class="product-price">$1800.80</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Want some amaizing shots?Don't look at the price, just fly!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Green Screen</h3>
+                        <span class="product-price">$50.48</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Create your own home studio and step to the influencing world,
+                                    which i don't like!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="each-product">
+                    <div class="thumbnil">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Action Camera</h3>
+                        <span class="product-price">$50.48</span>
+                        <div class="product-rating">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating-count">4.99</span>
+                                <p class=product-info>Very handy and very confortable to use with a minimum price. Also
+                                    best for biginers!</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
 
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
