main part, bonus part, footer added, no menu

--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 </head>
 
 <body>
-    <!-- menu part -->
+
     <header>
         <nav>
-            <div class="site-name">
+            <p class="site-name">Influencer products</p>
+            <!-- <div class="site-name">
                 <h3>Influencer products</h3>
-            </div>
-            <div class="site-menu">
+            </div> -->
+            <!-- <div class="site-menu">
                 <a href="">Home</a>
                 <a href="">Home</a>
                 <a href="">Home</a>
                 <a href="">Home</a>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
-            </div>
+            </div> -->
         </nav>
     </header>
     <main>
@@ -32,14 +33,15 @@
         <section class="first-part">
             <div class="first-text">
                 <h1>Start your journey as influencer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, laudantium.</p>
-                <a class="link-opener" target="_blank" href="https://github.com/Abduj-Zawad/">Prebook Now</a>
+                <p class="intro-text">Want to be influenced or became an influencer? This is the appropreate place for
+                    you.</p>
+                <a class="link-opener" target="_blank" href="https://github.com/Abduj-Zawad/">Hover Me <i
+                        class="fas fa-arrow-right"></i></a>
             </div>
             <div class="first-image">
                 <img src="./images/main-camera.png" alt="">
             </div>
         </section>
-        <!-- section.popular-collection>.products>article.each-product>.thumbnil>img[src="images/tripod.png"]+h3 -->
         <section class="popular-collection">
             <h2 class="section-title">Popular Collection</h2>
             <div class="products">
@@ -228,12 +230,43 @@
                         </div>
                     </div>
                 </article>
-
+            </div>
+            <div class="see-more">
+                <p>see more <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </section>
+        <section class="bonus-part">
+            <div class="top-influencer">
+                <h2 class="section-title">Top Influencers</h2>
+                <div class="influencers">
+                    <div class="influencer">
+                        <img src="images/player-1.png" alt="">
+                        <h3 class="influencer-name">Mahfuz</h3>
+                    </div>
+                    <div class="influencer">
+                        <img src="images/player-2.png" alt="">
+                        <h3 class="influencer-name">Rajjak</h3>
+                    </div>
+                    <div class="influencer">
+                        <img src="images/player-3.png" alt="">
+                        <h3 class="influencer-name">Robin</h3>
+                    </div>
+                </div>
+                <div class="see-more-bottom">
+                    <p>see more <i class="fas fa-arrow-right"></i></p>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <p>Influencer products</p>
+        <span id="footer-smalltext">© Developed by Zawad - 2022</span>
+        <div class="social-media">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
     </footer>
 </body>
 
